# AlignmentViewer

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
data/: alignment.aln  alignment.fasta  alignment.snippet.aln
src/AlignmentViewer/: AlignmentViewer.py  __init__.py  color_scheme.py  config.py  consensus.py  sequence.py  sequence_formatter.py  sequence_reader.py  viewer.py
tests/: test.jupyter.ipynb  test_biopython_integration.py  test_plotly_integration.py  test_sequence_formatter.py  test_sequence_reader.py  test_snp_coloring.py  test_viewer.py
