[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AlignmentViewer"
version = "0.1.0"
description = "A quick and simple FASTA alignment viewer for Python notebooks"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "ipython",
    "biopython>=1.74",
]

[project.urls]
Homepage = "https://github.com/ECV-Lab-KULeuven/AlignmentViewer"
Repository = "https://github.com/ECV-Lab-KULeuven/AlignmentViewer.git"
