[metadata]
name = AlignmentViewer
version = 0.1.0
description = A quick and simple FASTA alignment viewer for Python notebooks
long_description = file: README.md
long_description_content_type = text/markdown
author = Joon Klaps
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = fasta, alignment
project_urls =
    Homepage = https://github.com/ECV-Lab-KULeuven/AlignmentViewer
    Repository = https://github.com/ECV-Lab-KULeuven/AlignmentViewer.git

[options]
python_requires = >=3.6
package_dir =
    = src
packages = find:
install_requires =
    ipython<8.0
    biopython>=1.74

[options.packages.find]
where = src
